# pgcache

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  STRUCTURE_REVIEW.md
ADR/: ADR-013-ecostring-identifier-types.md  ADR-027-cdc-local-eval-fast-path.md  ADR-029-subsumption-complex-bucket-index.md  ADR-030-subsumption-two-sided-range-index.md  ADR-031-materialized-query-results.md  ADR-032-ecostring-by-default.md  ADR-033-unified-serving-runtime.md  ADR-034-cache-restart-supervisor.md  ADR-035-population-cdc-merge-consistency.md  ADR-036-response-memoization.md  ADR-037-constraint-containment-index.md  ADR-038-memory-pressure-governance.md  ADR-039-cdc-apply-batching.md  ADR-040-shape-keyed-serving.md  ADR-041-registration-admission-control.md  ADR-042-hot-path-allocation-elimination.md  ADR-043-disk-pressure-governance.md  ADR-044-generation-tracking-garbage-collection.md  ADR-045-candidate-narrowed-cdc-bookkeeping.md  ADR-046-cache-side-explain-pseudo-function.md  README.md
benches/: subsumption_index.rs
conformance/: Cargo.toml
conformance/data/: ATTRIBUTION.md
conformance/src/: annotation.rs  cdc_settling.rs  cli.rs  compare.rs  fixtures.rs  lib.rs  log_tail.rs  main.rs  poll.rs  report.rs  routing_check.rs  runner.rs  spawn.rs  status_client.rs
conformance/src/drivers/: mod.rs
conformance/suites/: aggregates.slt  aggregates_filter.slt  case.slt  join.slt  select.slt  subselect.slt  window.slt  with.slt
conformance/tests/: corpus_parses.rs
consistency/: Cargo.toml
consistency/src/: cli.rs  db.rs  invariants.rs  lib.rs  main.rs  runner.rs  scenario.rs  schema.rs  snapshot.rs  workload.rs
src/: admin.rs  catalog.rs  id_hash.rs  lib.rs  main.rs  memory.rs  metrics.rs  settings.rs  timing.rs  (+1 more)
(+180 files in other folders)
