[package]
name = "pgcache-conformance"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pgcache-conformance"
path = "src/main.rs"

[lib]
name = "pgcache_conformance"
path = "src/lib.rs"

[dependencies]
pgcache = { path = ".." }
sqllogictest = "0.29.1"
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = { git = "https://github.com/tempest98/rust-postgres", default-features = false, features = ["runtime"], branch = "compat" }
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
bytes = "1.11.1"
futures-util = "0.3.32"
pgtemp = "0.7.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
quick-junit = "0.6.0"
