[package]
name = "pgcache-consistency"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pgcache-consistency"
path = "src/main.rs"

[lib]
name = "pgcache_consistency"
path = "src/lib.rs"

[dependencies]
pgcache-conformance = { path = "../conformance" }
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = { git = "https://github.com/PgCache/rust-postgres", default-features = false, features = ["runtime"], branch = "compat" }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rand = "0.9.4"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
